[gd_scene load_steps=3 format=3 uid="uid://cobcn00385rbl"]

[ext_resource type="Script" path="res://scenes/components/shield_generator.gd" id="1_847ug"]
[ext_resource type="PackedScene" uid="uid://cy3lpn4w6872q" path="res://scenes/components/shield_bubble.tscn" id="2_iwmtw"]

[node name="ShieldGenerator" type="Node3D"]
script = ExtResource("1_847ug")

[node name="ShieldBubble" parent="." instance=ExtResource("2_iwmtw")]
unique_name_in_owner = true

[node name="RechargeDelay" type="Timer" parent="ShieldBubble"]
unique_name_in_owner = true
wait_time = 3.0
one_shot = true

[node name="RechargeTick" type="Timer" parent="ShieldBubble"]
unique_name_in_owner = true
wait_time = 0.2

[connection signal="ShieldGeneratorDisabled" from="." to="ShieldBubble" method="_on_shield_generator_shield_generator_disabled"]
[connection signal="ShieldGeneratorEnabled" from="." to="ShieldBubble" method="_on_shield_generator_shield_generator_enabled"]
[connection signal="timeout" from="ShieldBubble/RechargeDelay" to="ShieldBubble" method="_on_recharge_delay_timeout"]
[connection signal="timeout" from="ShieldBubble/RechargeTick" to="ShieldBubble" method="_on_recharge_tick_timeout"]
